[package]
name = "capybara"
version = "0.1.0"
authors = ["konstin <konstin@mailbox.org>"]
description = "A framework for generating bindings from Rust to arbitrary languages"
readme = "readme.md"
keywords = ["ffi", "bindings", "pyo3", "python", "helix", "ruby", "rails"]
categories = ["api-bindings", "development-tools::ffi"]
license = "Apache-2.0 OR MIT"

[features]
python = ["capybara-derive/python", "pyo3"]
ruby = ["capybara-derive/ruby", "helix"]
wasm = ["capybara-derive/wasm", "wasm-bindgen"]
debug-macros = ["capybara-derive/debug-macros"]

[dependencies]
pyo3 = { git = "https://github.com/PyO3/pyo3", rev="2ffa302a8da3551f288b2881897f0f00d5a16660", features = ["extension-module"], optional = true }
helix = { git = "https://github.com/konstin/helix", branch = "capybara",  optional = true }
capybara-derive = { path = "capybara-derive" }
wasm-bindgen = { version = "0.2.11", optional = true }

[workspace]
members = [
    "capybara-derive",
    "tests",
    "compare-codegen/*/",
]

exclude = [
    "helix",
]
