[package]
authors = ["konstin <konstin@mailbox.org>"]
name = "capybara-test"
version = "0.1.0"

[lib]
name = "capybara_test"
crate-type = ["cdylib"]

[dependencies]
capybara = { path = "../" }

[features]
capybara-python = ["capybara/python"]
capybara-ruby = ["capybara/ruby"]
capybara-wasm = ["capybara/wasm"]